Half of the files working perfect